Bug 1467798: Fix problems with inlining and paths in TestDllInterceptorCrossProcess; r=handyman